Teach CollectionUtils that List.of(), Set.of(), and Map.of() return unmodifiable collections. Eliminates some incorrect CacheManager warnings.